# keySTREAM_provisioning

./: KTA Code Check.docx  README.md  license.md  license.txt  module.xml  package.xml  package.yml  release_notes.md
Harmony_Apps/ATEC608_late_provisioning_app/keystream_connect.X/nbproject/: project.xml
Kta_Unified/: App_Config.h
Kta_Unified/gateway/: REVIEW.md
Kta_Unified/gateway/application/: main_baremetal_async_kta.c  main_freertos_async_kta.c  main_linux_async_kta.c  main_windows_async_kta.c
Kta_Unified/gateway/backends/: backend_interface.c  backend_interface.h  backend_message.c  backend_message.h
Kta_Unified/gateway/backends/ble/: backend_ble.c  ble_sal.h
Kta_Unified/gateway/backends/uart/: backend_uart.c  uart_sal.h
Kta_Unified/gateway/backends/usb/: backend_usb.c  usb_sal.h
Kta_Unified/gateway/backends/zigbee/: backend_zigbee.c  zigbee_sal.h
Kta_Unified/gateway/ktaIntegration/: README.md  ktaFieldMgntHook.c  ktaFieldMgntHook.h
Kta_Unified/mcu/: BUILD.md  Makefile  REVIEW.md  mcu_config.h
Kta_Unified/mcu/backends/: backend_interface.c  backend_interface.h
Kta_Unified/mcu/backends/ble/: backend_ble.c  ble_sal.h
Kta_Unified/mcu/backends/uart/: backend_uart.c  uart_sal.h
Kta_Unified/mcu/backends/usb/: backend_usb.c  usb_sal.h
Kta_Unified/mcu/backends/zigbee/: backend_zigbee.c  zigbee_sal.h
Kta_Unified/mcu/bridgeKta/: bridge_kta.c  bridge_kta.h
Kta_Unified/mcu/examples/: README.md
Kta_Unified/mcu/examples/common/: bridge_integration.c  bridge_integration.h
Kta_Unified/mcu/examples/platform/: kta_mcu_integration.h
PreConfigured-Examples/: Config.ps1  Getting_Started.md  Readme.md  Same54_Aws_setup.md
PreConfigured-Examples/TrustMANAGER/D21_X/keystream_connect/: App_Config.h  tmg_conf.h
PreConfigured-Examples/TrustMANAGER/SAME54_X/keystream_connect/: App_Config.h  tmg_conf.h
PreConfigured-Examples/TrustMANAGER/SG41_X/keystream_connect/: App_Config.h
PreIntegrated-Examples/: Config.ps1  Readme.md
PreIntegrated-Examples/TrustMANAGER/D21_X/keystream_connect/: App_Config.h
PreIntegrated-Examples/TrustMANAGER/ESP32_BLE_CLI_X/: App_Config.h  windows_ble_cli.py
PreIntegrated-Examples/TrustMANAGER/ESP32_BLE_CLI_X/firmware/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
PreIntegrated-Examples/TrustMANAGER/ESP32_Mobile_APP_X/firmware/: README.md  sdkconfig.old
PreIntegrated-Examples/TrustMANAGER/ESP32_Mobile_APP_X/firmware/main/: CMakeLists.txt  Kconfig.projbuild  aws_connect.h  project_config.h
PreIntegrated-Examples/TrustMANAGER/ESP32_Mobile_APP_X/firmware/main/kta_provisioning/mcu/: mcu_config.h
PreIntegrated-Examples/TrustMANAGER/ESP32_Mobile_APP_X/mobile/: App.tsx  app.json  index.js  package-lock.json  package.json  run-app.bat
PreIntegrated-Examples/TrustMANAGER/SAME54_X/keystream_connect/: App_Config.h
PreIntegrated-Examples/TrustMANAGER/SG41_UART_X/: App_Config.h  MPLABXLog.xml  build_gateway.bat  requirements.txt
PreIntegrated-Examples/TrustMANAGER/SG41_X/: mchp_non_tpds_fota.py  mchp_non_tpds_fota_config.ini
PreIntegrated-Examples/TrustMANAGER/SG41_X/keystream_connect/: App_Config.h
apps/keystream_late_provisioning_app/: readme.md
apps/keystream_late_provisioning_app/firmware/keystream_connect.X/: keystream_connect.mc3  mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml
apps/keystream_late_provisioning_app/firmware/src/: main.c
apps/keystream_late_provisioning_app/keystream_connect.X/: keystream_connect.mc3  mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml
apps/keystream_late_provisioning_app/keystream_connect.X/nbproject/: configurations.xml  project.xml
config/: kta_lib.py  module.py
config/filelist/: kta_files.xml
docs/: index.html
docs/common/: doxygen.css
docs/kta/doc/: Microchip_ecosystem  acthandler_8c.html  acthandler_8c.js  acthandler_8c__incl.dot  acthandler_8h.html  acthandler_8h.js  acthandler_8h__dep__incl.dot  acthandler_8h__incl.dot  acthandler_8h_source.html  annotated.html  annotated_dup.js  aws_setup.html  classes.html  cmdhandler_8c.html  cmdhandler_8c.js  cmdhandler_8c__incl.dot  cmdhandler_8h.html  cmdhandler_8h.js  cmdhandler_8h__dep__incl.dot  cmdhandler_8h__incl.dot  cmdhandler_8h_source.html  config_8c.html  config_8c.js  config_8c__incl.dot  config_8h.html  config_8h.js  config_8h__dep__incl.dot  config_8h__incl.dot  config_8h_source.html  config_issue.html  crypto_8c.html  crypto_8c.js  crypto_8c__incl.dot  custom_integration.html  custom_mcu_fota.html  d21.html  dir_000001_000008.html  dir_000001_000009.html  dir_000001_000010.html  dir_000001_000012.html  (+273 more)
docs/kta/doc/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+34 more)
docs/salapi_mchp/doc/: annotated.html  annotated_dup.js  classes.html  crypto_config_8h.html  crypto_config_8h.js  crypto_config_8h__dep__incl.dot  crypto_config_8h_source.html  dir_000000_000001.html  dir_000000_000002.html  dir_000002_000000.html  dir_000002_000001.html  dir_000003_000002.html  dir_60864ceb768185ac6327ae001cbbf6bb.html  dir_60864ceb768185ac6327ae001cbbf6bb_dep.dot  dir_86de2fa927f02998ccd20e25e1a56489.html  dir_86de2fa927f02998ccd20e25e1a56489_dep.dot  dir_9e363f36f24bb47b41c92bb586f92876.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.dot  files.html  files_dup.js  globals.html  globals_defs.html  globals_defs.js  globals_defs_f.html  globals_defs_k.html  globals_defs_m.html  globals_defs_s.html  globals_dup.js  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_k.html  globals_l.html  globals_m.html  globals_s.html  globals_t.html  globals_type.html  (+95 more)
kta_lib/kta_provisioning/: Makefile  cust_def_device.c  cust_def_signer.c  cust_def_signer.h  ktaConfig.h.ftl  ktaFieldMgntHook.c  ktaFieldMgntHook.h
kta_lib/kta_provisioning/fota_service/: Fota_Agent.c  Fota_Agent.h  Fota_Platform.c  Fota_Platform.h  Fota_Process.h
(+562 files in other folders)
